--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,6 @@
 
     <h1>MymeType - マイムタイプ - /maɪmtaɪp/</h1>
 
-    <h2>Main pages</h2>
-
     <p>
       #########
       <br />
@@ -81,18 +79,6 @@
       ######
     </p>
 
-    <!--
-    <p>
-      ###########
-      <br>
-      #<a href="changelog.html">CHANGELOG</a>#
-      <br>
-      ##########
-    </p>
-    -->
-
-    <h2>Webrings</h2>
-
     <div id="furryring">
       <script
         type="text/javascript"
@@ -105,7 +91,17 @@
       ></script>
     </div>
 
-    <h2>Website button</h2>
+    <p>
+      <a href="https://spax.zone/">
+        <img src="https://spax.zone/buttons/spaxdotzone.gif" />
+      </a>
+      <a href="https://mishamallow.neocities.org" target="_blank">
+        <img
+          src="https://mishamallow.neocities.org/buttons/mishamallow_1.gif"
+          alt="Mishamallow"
+        />
+      </a>
+    </p>
 
     <p>
       <img
@@ -121,61 +117,6 @@
       </textarea>
     </p>
 
-    <h2>Neat people (for various reasons)</h2>
-
-    <p>
-      <a href="https://spax.zone/">
-        <img src="https://spax.zone/buttons/spaxdotzone.gif" />
-      </a>
-      <a href="https://mishamallow.neocities.org" target="_blank">
-        <img
-          src="https://mishamallow.neocities.org/buttons/mishamallow_1.gif"
-          alt="Mishamallow"
-        />
-      </a>
-    </p>
-
-    <h2>Misc buttons</h2>
-
-    <p>
-      <a href="https://www.mabsland.com/Adoption.html">
-        <img src="images/Censor_14c.gif" width="88" height="31" />
-      </a>
-      <a href="https://www.kernel.org/pub/linux/kernel/v2.1/">
-        <img src="images/linuxnow.jpg" />
-      </a>
-      <a href="https://massgrave.dev/">
-        <img src="images/windows.gif" />
-      </a>
-      <a href="https://neocities.org">
-        <img src="images/neocities_made.gif" />
-      </a>
-      <a href="https://ohhey.gay">
-        <img src="images/gaypride.gif" />
-      </a>
-      <a href="https://github.com/ungoogled-software/ungoogled-chromium">
-        <img src="images/best_chrome.gif" />
-      </a>
-      <a href="https://creativecommons.org/licenses/list">
-        <img src="images/cc.primary.srr.gif" />
-      </a>
-      <a href="https://www.ebay.com/sch/i.html?_nkw=lenovo%20thinkpad%20w541">
-        <img src="images/bestvieweddesktop.gif" />
-      </a>
-      <a href="https://eggramen.neocities.org/creations/edits/buttons">
-        <img src="images/code-editor_button2multi.gif" />
-      </a>
-      <a href="https://gentoo.org">
-        <img src="images/gentoo_button.png" />
-      </a>
-      <a href="https://badge.les.bi">
-        <img title="bi" src="https://badge.les.bi/88x31/bi.svg" />
-      </a>
-      <a href="https://en.wikifur.com/wiki/MymeType">
-        <img src="images/twopaws.png" />
-      </a>
-    </p>
-
     <p>
       Fantasque Sans Mono © Jany Belluz 2013-2016 is licensed under the
       <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
@@ -189,7 +130,7 @@
     </p>
 
     <p>
-      Old Axel headshot header images © MymeType 2025 are licensed under
+      Old Axel headshot header images are licensed under
       <a href="licenses/general/CC-BY-SA-4.0.txt"> CC BY-SA 4.0 </a>
     </p>
 
